feat(08): adding swagger to all endpoints in project
