# handler/createOpening.go
@@ -6,6 +6,16 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+// @Summary Create Opening
+// @Description Create a new job opening
+// @Accept json
+// @Produce json
+// @Param request body CreateOpeningRequest true "Request Body"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreateOpeningRequest{}
 
