# handler/deleteOpening.go
@@ -7,6 +7,16 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+// @Summary Delete Opening
+// @Description Delete a job opening
+// @Accept json
+// @Produce json
+// @Param id query int true "Opening ID"
+// @Success 200 {object} handler.DeleteOpeningResponse
+// @Failure 400 {object} handler.ErrorResponse
+// @Failure 404 {object} handler.ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
