# handler/response.go
@@ -3,14 +3,15 @@ package handler
 import (
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"go-project/schemas"
 	"net/http"
 )
 
 func SendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "text/json; charset=utf-8")
 	ctx.JSON(code, gin.H{
-		"code":      code,
-		"errorCode": msg,
+		"errorCode": code,
+		"message":   msg,
 	})
 }
 
@@ -21,4 +22,40 @@ func SendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("operation from handler %s succes", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	ErrorCode int    `json:"errorCode"`
+	Message   string `json:"message"`
+}
+
+type SuccessResponse struct {
+	Code    int                    `json:"code"`
+	Message string                 `json:"message"`
+	Data    map[string]interface{} `json:"data"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type UpdateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type ListOpeningsResponse struct {
+	Message string                    `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
 }
