# handler/showOpening.go
@@ -7,6 +7,16 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+// @Summary Show Opening
+// @Description Get one job opening by ID
+// @Accept json
+// @Produce json
+// @Param id query int true "Opening ID"
+// @Success 200 {object} handler.ShowOpeningResponse
+// @Failure 400 {object} handler.ErrorResponse
+// @Failure 404 {object} handler.ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
